# bookmarker

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  db_util.py  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/api/: auth.py  bookmarks.py
extension/: auth.js  background.js  config.js  login.html  login.js  manifest.json  options.html  options.js  popup.html  popup.js  readme.md  share.html  share.js  styles.css
extension/icons/: README.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: BookmarkItem.jsx  BookmarkList.jsx  Login.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/services/: api.js
